# Multi-Agent-Equity-Portfolio-Manager

./: .dockerignore  DEVELOPER_GUIDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  README.md  USER_GUIDE.md  docker-compose.yml  env.example  main.py  pyproject.toml  pytest.ini  requirements.txt
app/: __init__.py
app/agents/: __init__.py  alpha_agent.py  compliance_agent.py  cot_optimization_agent.py  data_agent.py  graph.py  optimization_agent.py  prompts.py  risk_agent.py  state.py
app/api/: __init__.py  health_router.py  optimization_router.py  portfolio_router.py
app/core/: __init__.py  config.py  constants.py  dependencies.py
app/llm/: __init__.py  anthropic_provider.py  deepseek_provider.py  factory.py  openai_provider.py  openrouter_provider.py
app/models/: __init__.py  alpha.py  benchmark.py  constraint.py  portfolio.py  risk.py  security.py  transaction_cost.py
app/repositories/: __init__.py
app/schemas/: __init__.py  agent_schema.py  optimization_schema.py  portfolio_schema.py
app/services/: __init__.py  alpha_service.py  compliance_service.py  data_service.py  optimization_service.py  risk_service.py
app/solvers/: __init__.py  cvxpy_solver.py  factory.py  scipy_solver.py
app/tools/: __init__.py  base.py  data_tools.py  langchain_tools.py
data/: 05_Risk_Model_Factor_Loadings.csv  07_Risk_Model_Factor_Covariance.csv
testdata/: 01_SP500_Benchmark_Constituency.csv  02_SP500_Universe.csv  03_Portfolio_25_Holdings.csv  04_Alpha_Model_SP500.csv  06_Risk_Model_Factor_Returns.csv  09_Transaction_Cost_Model.csv
tests/: __init__.py  conftest.py
(+49 files in other folders)
