[project]
name = "multi-agent-equity-portfolio-manager"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.8.0",
    "cvxpy>=1.4.0",
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.5",
    "langgraph>=0.0.40",
    "numpy>=1.26.0",
    "openai>=1.6.0",
    "pandas>=2.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "scipy>=1.11.0",
    "uvicorn[standard]>=0.24.0",
]
